--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.1</version>
+					<configuration>
+					<suiteXmlFiles>
+					<suiteXmlFile>TestRunner\E2ESuite.xml</suiteXmlFile>
+					</suiteXmlFiles>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
